# Spiel

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  My thoughts.txt  NOTICE  README.md  build_deps_server.sh  icon.svg.import  project.godot  spiel interface.png.import
app/: .Makefile.swp  Makefile
app/src/: main.cpp
app/thoughts/: genious idea.txt
client/: index.html  index.js  info.txt  main.js
common/main/: main_node.tscn  main_script.gd
common/map/: the_map.tscn
interface/Map Editor/: load_popup.tscn  map_editor.gd  map_editor.tscn
interface/Map Editor/map/: Map.tscn  graph_info.gd  map.tres  map_info.gd
interface/Save Editor/: save_editor.tscn
interface/cmd line/: CMD.tscn
interface/host lobby/: host_lobby.tscn
interface/main/: main_scene.tscn
interface/multiplayer/: multiplayer.tscn
library_example/py/: main.py  setup.py  wrapper.c
library_example/src/: spiellib.c  spiellib.h
pictures/: Icon.png.import  Loading_screen.png.import
pictures/base/: Icon.png.import  Loading_screen.png.import
pictures/map/: pic.png.import
server/: CMakeLists.txt  Makefile  info.txt  server.c
server/py/: :wq  index.html  test_client.py
server/src/: main.cpp
thoughts/: eco.txt
